--- a/report-service/src/main/resources/application.yml
+++ b/report-service/src/main/resources/application.yml
@@ -1,1 +1,7 @@
-spring.application.name=report-service
+spring:
+  application:
+    name: report-service
+  profiles:
+    active: test
+server:
+  port: 8084
