--- a/scraper-service/src/main/resources/application-dev.yml
+++ b/scraper-service/src/main/resources/application-dev.yml
@@ -1,5 +1,30 @@
-#spring:
-#  cloud:
-#    nacos:
-#      discovery:
-#        server-addr: 127.0.0.1:8848
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/playground?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Taipei
+    username: root
+    password:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+mybatis-plus:
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.personal.project.scraperservice.model.entity
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+logging:
+  level:
+    com.personal.project.stockservice.mapper: debug
+
+xxl:
+  job:
+    enabled: true
+    accessToken: personal
+    admin:
+      addresses: http://127.0.0.1:8080/xxl-job-admin
+    executor:
+      appName: scraper-job
+      address:
+      ip:
+      port:
+      logpath: logs
+      logretentiondays: 30
