--- a/scraper-service/src/main/resources/application-dev.yml
+++ b/scraper-service/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/playground?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Taipei
+    url: jdbc:mysql://localhost:3306/scraper_service?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Taipei
     username: root
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -17,14 +17,14 @@ logging:
 
 xxl:
   job:
-    enabled: true
+#    enabled: true
     accessToken: personal
     admin:
       addresses: http://127.0.0.1:8080/xxl-job-admin
     executor:
-      appName: scraper-job
-      address:
-      ip:
-      port:
+      appName: scraper-service
+#      address:
+#      ip:
+#      port:
       logpath: logs
       logretentiondays: 30
