--- a/stock-service/pom.xml
+++ b/stock-service/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
+
         <!--        nacos服務註冊-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
