--- a/stock-service/src/main/resources/application-dev.yml
+++ b/stock-service/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/playground?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Taipei
+    url: jdbc:mysql://localhost:3306/stock_service?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Taipei
     username: root
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
