--- a/report-service/src/main/resources/application-dev.yml
+++ b/report-service/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/playground?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Taipei
+    url: jdbc:mysql://localhost:3306/report_service?rewriteBatchedStatements=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Taipei
     username: root
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -22,7 +22,7 @@ xxl:
     admin:
       addresses: http://127.0.0.1:8080/xxl-job-admin
     executor:
-      appName: report-job
+      appName: report-service
       address:
       ip:
       port:
