--- a/scraper-service/src/main/resources/application-dev.yml
+++ b/scraper-service/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/scraper_service?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Taipei
+    url: jdbc:mysql://localhost:3306/scraper_service?rewriteBatchedStatements=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Taipei
     username: root
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -10,6 +10,7 @@ mybatis-plus:
   type-aliases-package: com.personal.project.scraperservice.model.entity
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  type-handlers-package: com.personal.project.scraperservice.typehandler
 
 logging:
   level:
