--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <xxl-job.version>2.4.1</xxl-job.version>
         <hutool-all.version>5.8.26</hutool-all.version>
         <mybatis-plus.version>3.5.6</mybatis-plus.version>
+        <pagehelper.version>2.1.0</pagehelper.version>
     </properties>
 
     <dependencyManagement>
@@ -114,6 +115,22 @@
             </dependency>
 
             <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.mybatis</groupId>
+                        <artifactId>mybatis</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.mybatis</groupId>
+                        <artifactId>mybatis-spring</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>3.14.0</version>
@@ -134,7 +151,7 @@
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-java</artifactId>
-                <version>4.22.0</version>
+                <version>4.18.1</version>
             </dependency>
 
 
