delete cache-service, scrape-service setting lock, done stock-service query api for front-end

--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -10,7 +10,7 @@ spring:
         - id: stock-service
           uri: lb://stock-service
           predicates:
-            - Path=/gateway/stock/**
+            - Path=/gw/stock/**
           filters:
             - StripPrefix=2
   profiles:
