logback configuration done

--- a/auth-service/src/main/resources/application-dev.yml
+++ b/auth-service/src/main/resources/application-dev.yml
@@ -28,6 +28,6 @@ mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
-logging:
-  level:
-    com.personal.project.authservice.mapper: debug
+#logging:
+#  level:
+#    com.personal.project.authservice.mapper: debug
