--- a/report-service/src/main/resources/application-dev.yml
+++ b/report-service/src/main/resources/application-dev.yml
@@ -11,20 +11,20 @@ mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
-logging:
-  level:
-    com.personal.project.stockservice.mapper: debug
+#logging:
+#  level:
+#    com.personal.project.stockservice.mapper: debug
 
 xxl:
   job:
     enabled: true
     accessToken: personal
     admin:
-      addresses: http://127.0.0.1:8080/xxl-job-admin
+      addresses: http://127.0.0.1:8998/xxl-job-admin
     executor:
       appName: report-service
-      address:
-      ip:
-      port:
-      logpath: logs
-      logretentiondays: 30
+#      address:
+#      ip:
+#      port:
+#      logpath:
+#      logretentiondays:
