--- a/user-service/src/main/resources/application-dev.yml
+++ b/user-service/src/main/resources/application-dev.yml
@@ -11,6 +11,6 @@ mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
-logging:
-  level:
-    com.personal.project.userservice.mapper: debug
+#logging:
+#  level:
+#    com.personal.project.userservice.mapper: debug
