logback configuration fix

--- a/report-service/src/main/resources/application-dev.yml
+++ b/report-service/src/main/resources/application-dev.yml
@@ -26,5 +26,5 @@ xxl:
 #      address:
 #      ip:
 #      port:
-#      logpath:
-#      logretentiondays:
+      logpath:
+      logretentiondays:
