--- a/scraper-service/src/main/resources/application-dev.yml
+++ b/scraper-service/src/main/resources/application-dev.yml
@@ -36,5 +36,5 @@ xxl:
 #      address:
 #      ip:
 #      port:
-#      logpath:
-#      logretentiondays:
+      logpath:
+      logretentiondays:
