docker compose setting done

--- a/report-service/pom.xml
+++ b/report-service/pom.xml
@@ -99,6 +99,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>report-service</finalName>
     </build>
 
 </project>
