--- a/stock-service/pom.xml
+++ b/stock-service/pom.xml
@@ -105,9 +105,18 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <mainClass>com.personal.project.stockservice.StockServiceApplication</mainClass>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
+        <finalName>stock-service</finalName>
     </build>
 
 </project>
