--- a/scraper-service/pom.xml
+++ b/scraper-service/pom.xml
@@ -136,6 +136,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>scraper-service</finalName>
     </build>
 
 </project>
