all service container setting done

--- a/chat-service/pom.xml
+++ b/chat-service/pom.xml
@@ -84,6 +84,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>chat-service</finalName>
     </build>
 
 </project>
