--- a/scraper-service/src/main/resources/application-dev.yml
+++ b/scraper-service/src/main/resources/application-dev.yml
@@ -38,3 +38,9 @@ xxl:
 #      port:
       logpath:
       logretentiondays:
+
+scraper:
+  resource:
+    driver:
+    browserpath:
+    driverpath:
