--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -107,6 +107,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>auth-service</finalName>
     </build>
 
 </project>
