--- a/auth-service/src/main/resources/bootstrap.yml
+++ b/auth-service/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: auth-service
   profiles:
-    active: dev
+    active: docker
   cloud:
     nacos:
       config:
