--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -100,6 +100,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>gateway</finalName>
     </build>
 
 </project>
