--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -37,7 +37,7 @@ spring:
           filters:
             - StripPrefix=2
   profiles:
-    active: dev
+    active: docker
 
 server:
   port: 8999
