--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,122 +1,227 @@
 # version: "3"
 services:
-    mysql:
-        image: mysql
-        container_name: mysql
-        privileged: true
-        ports:
-          - "3306:3306"
-        volumes:
-          - /Users/phillip/Desktop/stinfo/mysql_conf/log:/var/log/mysql
-          - /Users/phillip/Desktop/stinfo/mysql_conf/data:/var/lib/mysql
-        environment:
-          - MYSQL_ROOT_PASSWORD=root
-          - TZ=Asia/Taipei
-    redis:
-        image: redis
-        container_name: redis
-        privileged: true
-        ports:
-          - "6379:6379"
-        volumes:
-          - /Users/phillip/Desktop/stinfo/redis_conf/redis.conf:/usr/local/etc/redis/redis.conf
-          - /Users/phillip/Desktop/stinfo/redis_conf/data:/data
-        environment:
-          - TZ=Asia/Taipei
-        command: redis-server /usr/local/etc/redis/redis.conf
-    rabbitmq:
-        image: rabbitmq:management
-        container_name: rabbitmq
-        hostname: rabbitmq
-        ports:
-          - "15672:15672"
-          - "5672:5672"
-        volumes:
-          - /Users/phillip/Desktop/stinfo/rabbitmq_conf/data:/var/lib/rabbitmq
-          - /Users/phillip/Desktop/stinfo/rabbitmq_conf/logs:/var/log/rabbitmq
-        environment:
-          - TZ=Asia/Taipei
-    nacos:
-        image: nacos/nacos-server
-        container_name: nacos
-        privileged: true
-        ports:
-          - "8848:8848"
-          - "9848:9848"
-          - "9849:9849"
-          - "7848:7848"
-        volumes: 
-          - /Users/phillip/Desktop/stinfo/nacos_conf/data:/home/nacos/data
-          - /Users/phillip/Desktop/stinfo/nacos_conf/conf:/home/nacos/conf
-          - /Users/phillip/Desktop/stinfo/nacos_conf/logs:/home/nacos/logs
-        environment:
-          - TZ=Asia/Taipei
-          - MODE=standalone
-    xxl-job-admin:
-        image: xxl-job-admin:2.4.1
-        container_name: xxl-job-admin
-        ports:
-          - "8998:8080"
-        volumes:
-          - /Users/phillip/Desktop/stinfo/xxladmin_conf/logs:/data/applogs/xxl-job
-        environment:
-          TZ: 'Asia/Taipei'
-          PARAMS: '--spring.datasource.url=jdbc:mysql://mysql.stinfo.orb.local/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai --spring.datasource.password=root --xxl.job.accessToken=personal --xxl.job.triggerpool.fast.max=4 --xxl.job.triggerpool.slow.max=2 --xxl.job.logretentiondays=7'
-        depends_on:
-            - mysql
-    nginx:
-        image: nginx
-        container_name: nginx
-        ports: 
-          - "80:80"
-        volumes:
-          - /Users/phillip/Desktop/stinfo/nginx_conf/logs:/var/log/nginx
-          - /Users/phillip/Desktop/stinfo/nginx_conf/nginx.conf:/etc/nginx/nginx.conf
-          - /Users/phillip/Desktop/stinfo/nginx_conf/sites-enabled:/etc/nginx/sites-enabled
-        environment:
-          - TZ=Asia/Taipei
-    scraper-service:
-        image: scraper-service
-        container_name: scraper-service
-        ports: 
-          - "8083:8083"
-        volumes:
-          - /Users/phillip/Desktop/stinfo/logs/scraper-service:/app/logs
-          - /Users/phillip/Desktop/stinfo/logs/scraper-service/xxl:/app/logs/xxl
-          - /Users/phillip/Desktop/stinfo/jars/scraper-service/scraper-service.jar:/app/scraper-service.jar
-        environment:
-          - TZ=Asia/Taipei
-        depends_on:
-          - mysql
-          - nacos
-          - redis
-          - xxl-job-admin
-    stock-service:
-        image: stock-service
-        container_name: stock-service
-        ports: 
-          - "8082:8082"
-        volumes:
-          - /Users/phillip/Desktop/stinfo/logs/stock-service:/app/logs
-          - /Users/phillip/Desktop/stinfo/jars/stock-service/stock-service.jar:/app/stock-service.jar
-        environment:
-          - TZ=Asia/Taipei
-        depends_on:
-          - mysql
-          - nacos      
-    report-service:
-        image: report-service
-        container_name: report-service
-        ports: 
-          - "8084:8084"
-        volumes:
-          - /Users/phillip/Desktop/stinfo/logs/report-service:/app/logs
-          - /Users/phillip/Desktop/stinfo/logs/report-service/xxl:/app/logs/xxl
-          - /Users/phillip/Desktop/stinfo/jars/report-service/report-service.jar:/app/report-service.jar
-        environment:
-          - TZ=Asia/Taipei    
-        depends_on:
-          - mysql
-          - nacos
-          - redis
-          - xxl-job-admin
+  mysql:
+    image: mysql
+    container_name: mysql
+    privileged: true
+    ports:
+      - "3306:3306"
+    volumes:
+      - /Users/phillip/Desktop/stinfo/mysql_conf/log:/var/log/mysql
+      - /Users/phillip/Desktop/stinfo/mysql_conf/data:/var/lib/mysql
+    # environment:
+    #   - MYSQL_ROOT_PASSWORD=root
+    #   - TZ=Asia/Taipei
+    env_file: ./compose-env/mysql.env
+    healthcheck:
+      test: [ "CMD", "mysqladmin","ping","-h","localhost","-u","root","-p${MYSQL_ROOT_PASSWORD}"]
+      start_period: 5s
+      interval: 10s
+      timeout: 10s
+      retries: 3
+  redis:
+    image: redis
+    container_name: redis
+    privileged: true
+    ports:
+      - "6379:6379"
+    volumes:
+      - /Users/phillip/Desktop/stinfo/redis_conf/redis.conf:/usr/local/etc/redis/redis.conf
+      - /Users/phillip/Desktop/stinfo/redis_conf/data:/data
+    # environment:
+    #   - TZ=Asia/Taipei
+    env_file: ./compose-env/redis.env
+    command: redis-server /usr/local/etc/redis/redis.conf
+    healthcheck:
+      test: ["CMD", "redis-cli","ping"]
+      interval: 10s
+      timeout: 10s
+      retries: 3
+  rabbitmq:
+    image: rabbitmq:management
+    container_name: rabbitmq
+    hostname: rabbitmq
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+    volumes:
+      - /Users/phillip/Desktop/stinfo/rabbitmq_conf/data:/var/lib/rabbitmq
+      - /Users/phillip/Desktop/stinfo/rabbitmq_conf/logs:/var/log/rabbitmq
+    # environment:
+    #   - TZ=Asia/Taipei
+    env_file: ./compose-env/rabbitmq.env
+  nacos:
+    image: nacos/nacos-server
+    container_name: nacos
+    privileged: true
+    ports:
+      - "8848:8848"
+      - "9848:9848"
+      - "9849:9849"
+      - "7848:7848"
+    volumes:
+      - /Users/phillip/Desktop/stinfo/nacos_conf/data:/home/nacos/data
+      - /Users/phillip/Desktop/stinfo/nacos_conf/conf:/home/nacos/conf
+      - /Users/phillip/Desktop/stinfo/nacos_conf/logs:/home/nacos/logs
+    # environment:
+    #   - TZ=Asia/Taipei
+    #   - MODE=standalone
+    env_file: ./compose-env/nacos.env
+    healthcheck:
+      test: [ "CMD","curl","-f","http://localhost:8848/nacos/v1/console/health/readiness" ]
+      interval: 10s
+      timeout: 10s
+      retries: 3
+  xxl-job-admin:
+    image: xxl-job-admin:2.4.1
+    container_name: xxl-job-admin
+    ports:
+      - "8998:8080"
+    volumes:
+      - /Users/phillip/Desktop/stinfo/xxladmin_conf/logs:/data/applogs/xxl-job
+    # environment:
+    #   TZ: 'Asia/Taipei'
+    #   PARAMS: '--spring.datasource.url=jdbc:mysql://mysql.stinfo.orb.local/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai --spring.datasource.password=root --xxl.job.accessToken=personal --xxl.job.triggerpool.fast.max=4 --xxl.job.triggerpool.slow.max=2 --xxl.job.logretentiondays=7'
+    env_file: ./compose-env/xxl-job-admin.env
+    depends_on:
+      mysql:
+        condition: service_healthy
+  nginx:
+    image: nginx
+    container_name: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - /Users/phillip/Desktop/stinfo/nginx_conf/logs:/var/log/nginx
+      - /Users/phillip/Desktop/stinfo/nginx_conf/nginx.conf:/etc/nginx/nginx.conf
+      - /Users/phillip/Desktop/stinfo/nginx_conf/sites-enabled:/etc/nginx/sites-enabled
+    # environment:
+    #   - TZ=Asia/Taipei
+    env_file: ./compose-env/nginx.env
+  scraper-service:
+    image: scraper-service
+    container_name: scraper-service
+    ports:
+      - "8083:8083"
+    volumes:
+      - /Users/phillip/Desktop/stinfo/logs/scraper-service:/app/logs
+      - /Users/phillip/Desktop/stinfo/logs/scraper-service/xxl:/app/logs/xxl
+      - /Users/phillip/Desktop/stinfo/jars/scraper-service/scraper-service.jar:/app/scraper-service.jar
+    # environment:
+    #   - TZ=Asia/Taipei
+    env_file: ./compose-env/scraper-service.env
+    depends_on:
+      mysql:
+        condition: service_healthy
+      nacos:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      xxl-job-admin:
+        condition: service_started
+  stock-service:
+    image: stock-service
+    container_name: stock-service
+    ports:
+      - "8082:8082"
+    volumes:
+      - /Users/phillip/Desktop/stinfo/logs/stock-service:/app/logs
+      - /Users/phillip/Desktop/stinfo/jars/stock-service/stock-service.jar:/app/stock-service.jar
+    environment:
+      - TZ=Asia/Taipei
+    depends_on:
+      mysql:
+        condition: service_healthy
+      nacos:
+        condition: service_healthy
+  report-service:
+    image: report-service
+    container_name: report-service
+    ports:
+      - "8084:8084"
+    volumes:
+      - /Users/phillip/Desktop/stinfo/logs/report-service:/app/logs
+      - /Users/phillip/Desktop/stinfo/logs/report-service/xxl:/app/logs/xxl
+      - /Users/phillip/Desktop/stinfo/jars/report-service/report-service.jar:/app/report-service.jar
+    environment:
+      - TZ=Asia/Taipei
+    depends_on:
+      mysql:
+        condition: service_healthy
+      nacos:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      xxl-job-admin:
+        condition: service_started
+  gateway:
+    image: gateway
+    container_name: gateway
+    ports:
+      - "8999:8999"
+    volumes:
+      - /Users/phillip/Desktop/stinfo/logs/gateway:/app/logs
+      - /Users/phillip/Desktop/stinfo/jars/gateway/gateway.jar:/app/gateway.jar
+    environment:
+      - TZ=Asia/Taipei
+    depends_on:
+      mysql:
+        condition: service_healthy
+      nacos:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+  chat-service:
+    image: chat-service
+    container_name: chat-service
+    ports:
+      - "8087:8087"
+    volumes:
+      - /Users/phillip/Desktop/stinfo/logs/chat-service:/app/logs
+      - /Users/phillip/Desktop/stinfo/jars/chat-service/chat-service.jar:/app/chat-service.jar
+    environment:
+      - TZ=Asia/Taipei
+    depends_on:
+      nacos:
+        condition: service_healthy
+  auth-service:
+    image: auth-service
+    container_name: auth-service
+    ports:
+      - "8086:8086"
+    volumes:
+      - /Users/phillip/Desktop/stinfo/logs/auth-service:/app/logs
+      - /Users/phillip/Desktop/stinfo/jars/auth-service/auth-service.jar:/app/auth-service.jar
+    environment:
+      - TZ=Asia/Taipei
+    depends_on:
+      mysql:
+        condition: service_healthy
+      nacos:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+  python-service:
+    image: python-service
+    container_name: python-service
+    ports:
+      - "5000:5000"
+    volumes:
+      - /Users/phillip/Desktop/stinfo/logs/python-service:/app/logs
+    environment:
+      - TZ=Asia/Taipei
+    depends_on:
+      nacos:
+        condition: service_healthy
+  firefox-service:
+    image: selenium/standalone-firefox:130.0-geckodriver-0.35-20240922
+    container_name: firefox-service
+    ports:
+      - "4444:4444"
+      - "7900:7900"
+    shm_size: 4g
+    environment:
+      - TZ=Asia/Taipei
+      - SE_ENABLE_TRACING=false
+      - SE_NODE_OVERRIDE_MAX_SESSIONS=true
+      - SE_NODE_MAX_SESSIONS=5
